# naval

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: cmake-scripts.cmake  tools.cmake
examples/: CMakeLists.txt  example.cpp
include/naval/: colors.hpp  debug_visualizer.hpp  figure.hpp  frame.hpp  image.hpp  log_level.hpp  log_packet.hpp  message_metadata.hpp  noop_stream.hpp  sink.hpp  sink_stream.hpp  stream.hpp  stream_logger.hpp  tag.hpp
include/naval/detail/: macros.hpp  serialization.hpp  sinks_impl.hpp
include/naval/primitives/: draw_properties.hpp  figure.hpp  image.hpp  message_metadata.hpp  popup.hpp  tag.hpp
src/: draw_properties.cpp  figure.cpp  frame.cpp  image.cpp  log_packet.cpp  sink.cpp  sink_stream.cpp  stream_logger.cpp  tag.cpp
src/detail/: serialization.cpp
src/primitives/: draw_properties.cpp  figure.cpp  image.cpp  popup.cpp  tag.cpp
test/: CMakeLists.txt  test_draw_properties.cpp  test_figure.cpp  test_frame.cpp  test_image.cpp  test_log_packet.cpp  test_message_metadata.cpp  test_noopstream.cpp  test_sink.cpp  test_sink_stream.cpp  test_stream_logger.cpp  test_tag.cpp
test/detail/: test_serialization.cpp  test_sink_impl.cpp
test/primitives/: test_draw_properties.cpp  test_figure.cpp  test_image.cpp  test_message_metadata.cpp  test_tag.cpp
